RESOLVED FIXED243716
Web Inspector: Debugger: symbolic breakpoints should work with native functions
https://bugs.webkit.org/show_bug.cgi?id=243716
Summary Web Inspector: Debugger: symbolic breakpoints should work with native functions
Devin Rousso
Reported 2022-08-08 22:35:53 PDT
e.g. a symbolic breakpoint for "preventDefault" should pause when `Event.prototype.preventDefault` is called
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-15 22:36:14 PDT
Devin Rousso
Comment 2 2022-08-16 10:08:49 PDT
EWS
Comment 3 2022-08-25 13:38:02 PDT
Committed 253791@main (bdc7d2c65ad3): <https://commits.webkit.org/253791@main> Reviewed commits have been landed. Closing PR #3367 and removing active labels.
WebKit Commit Bot
Comment 4 2022-08-27 11:50:10 PDT
Re-opened since this is blocked by bug 244435
Yusuke Suzuki
Comment 5 2022-08-27 13:09:59 PDT
Debugger destruction caused crash. Can you take a look? Also, why is debugger enabled in these workers? Can you check it is not enabled in the normal browsing? We are generating slow code if debugger exists, and it is not OK to always use this slow code, so let’s check it. Also, JetStream2 and Speedometer2 tests are frequently crashing in the large revision range and this is included in that range. So we need to validate this will not cause JetStream2 and Speedometer2 crashes.
Yusuke Suzuki
Comment 6 2022-08-27 23:34:39 PDT
Confirmed, JetStream2 gets broken with this. So, when updating, please ensure that JetStream2 runs correctly.
Devin Rousso
Comment 7 2022-08-30 17:11:26 PDT
EWS
Comment 8 2022-08-31 11:25:16 PDT
Committed 253999@main (f0c85afe24ed): <https://commits.webkit.org/253999@main> Reviewed commits have been landed. Closing PR #3831 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.